--- a/sentinel-dashboard/src/main/resources/application.properties
+++ b/sentinel-dashboard/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.http.encoding.force=true
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 
+server.port=10003
+
 #logging settings
 logging.level.org.springframework.web=INFO
 logging.file=${user.home}/logs/csp/sentinel-dashboard.log
